# AntiSleep

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
docs/: PRODUCT_DESIGN.md
plans/: anti-lock-screen-tool-crossplatform_381f7624(未完成).md  anti-sleep-premium-screensaver_4a6e16a8.md  macOS-anti-lock-screen-tool_66e0cdab(未完成).md
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  platform_macos.rs  platform_windows.rs  sleep_prevention.rs  smart_scene.rs  tray.rs
src/components/: ErrorBoundary.tsx
src/components/lock/: GestureUnlock.tsx  LockScreenOverlay.tsx  PinUnlock.tsx
src/components/onboarding/: Onboarding.tsx
src/components/screensaver/: EffectLayer.tsx  FloatingControls.tsx  InfoOverlay.tsx  MarqueeLayer.tsx  ScreensaverWindow.tsx  WallpaperLayer.tsx
src/components/settings/: AboutSettings.tsx  GeneralSettings.tsx  MarqueeSettings.tsx  PreviewSettings.tsx  SecuritySettings.tsx  SettingsPanel.tsx  SmartSceneSettings.tsx  ThemeSettings.tsx  WallpaperSettings.tsx
src/components/tray/: DurationSelector.tsx  MarqueePreview.tsx  StatusIndicator.tsx  ThemePreviewGrid.tsx  ToggleButton.tsx  TrayPanel.tsx
src/hooks/: useIdleScreensaver.ts  useScreensaver.ts  useSleepPrevention.ts
src/lib/: format.ts  persist.ts  system-services.ts  tauri-commands.ts  window.ts
src/marquee/: types.ts
src/stores/: appStore.ts
src/styles/: globals.css
src/themes/: aurora.ts  breathing-light.ts  clock.ts  fireflies.ts  matrix.ts  neon-geo.ts  particle-network.ts  registry.ts  starfield.ts  types.ts  wave-fluid.ts
src/types/: index.ts
src/wallpaper/: types.ts
