[package]
name = "antisleep"
version = "1.0.0"
edition = "2021"
description = "AntiSleep - Cross-platform screen lock prevention tool"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
sysinfo = "0.38.4"
battery = "0.7.8"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSWindow"] }

# Windows specific
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_System_Power",
  "Win32_Foundation",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
